<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskMaker</string>
    <string name="task_description">What Needs to Get Done?</string>
    <string name="task_priority">Priority Task</string>
    <string name="task_date">Due Date</string>
    <string name="demo_task">Make a working demo</string>
    <string name="date_empty">Not Set</string>
    <string name="action_save">Save</string>
    <string name="action_reminder">Set Reminder</string>
    <string name="action_delete">Delete Task</string>
    <string name="ct_dsc_priority">Priority image</string>
    <string name="settings">Settings</string>
    <string name="pref_sortOrder_title">Sort Order</string>
    <string name="pref_sortBy_title">Sort By:</string>
    <string name="pref_summary">Choose an order to sort your tasks.</string>
    <string name="pref_sortBy_default_label">Default</string>
    <string name="pref_sortBy_due_label">Due Date</string>
    <string name="reminder_title">Task Reminder</string>

    <string name="pref_sortBy_key" translatable="false">sort</string>
    <string name="pref_sortBy_default" translatable="false">default</string>
    <string name="pref_sortBy_due" translatable="false">due</string>

    <!-- Custom Strings -->
    <string name="dialog_confirm_title">Confirm</string>

    <string name="action_undo">UNDO</string>

    <string name="cd_empty">No tasks found icon.</string>

    <string name="msg_task_completed">Task completed!</string>
    <string name="msg_task_uncompleted">Task non completed!</string>
    <string name="msg_confirm_delete">Do you really want to remove this task?</string>
    <string name="msg_delete_success">Task deleted successfully!</string>
    <string name="msg_new_success">Task inserted successfully!</string>
    <string name="msg_remind_success">Reminder registered successfully!</string>
    <string name="msg_empty">No tasks found</string>
    <string name="msg_empty_complement">Click the floating button to create a new task</string>
</resources>
